# giganovel-rs

./: .gitignore  Cargo.toml  README  README.md
giganovel/: Cargo.toml
giganovel/src/: main.rs
rand-python/: Cargo.toml
rand-python/src/: lib.rs  mersenne_twister.rs
src/: main.rs
