[package]
name = "giganovel"
version = "0.1.0"
authors = ["Ronald Volgers <rvolgers@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand-python = { path = "../rand-python" }
encoding_rs = "0.8.22"
indexmap = "1.3.2"
regex = "1.3.4"
