[package]
name = "giganovel"
version = "0.1.0"
authors = ["Ronald Volgers <rvolgers@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true


[dependencies]
rand-python = { path = "../rand-python" }
encoding_rs = "0.8.22"
aho-corasick = "0.7.9"
fnv = "1.0.6"
bitvec = "0.17.2"
